# GLEXcoll

./: CMakeLists.txt  GenNodeFile.py  PJT_Partition_adviseFile.txt  README.md  batch-allreduce.sh  batch-alltoall.sh  batch-alltoallv.sh  batch-inter-mid-split.sh  batch-total.sh  batch.sh  batch_intra.sh  job-auto-cancel.py  nodefile.txt  performace_test.sh  pjt_one_button_startup_all.sh  znj_pjt_one_button_startup_all.sh
data_visit/: Alltoall-data-process.py  Reduce-data-process.py  alltoallv-min-avg-max-steptime.py  alltoallv-step-performance.py
include/: BasicDataStructure.h  glex.h  glexallreduce.h  glexalltoall.h  glexcoll.h
src/: BasicDataStructure.c  CMakeLists.txt  alltoall.c  glex_epmanager.c  glexcoll_Iallreduce.c  glexcoll_Init.c  glexcoll_Initallreduce.c  glexcoll_allreduce.c  glexcoll_allreduce_intra.c  glexcoll_alltoallv.c  glexcoll_init_shm.c
test/: CMakeLists.txt  allreduce-multipledata.cpp  alltoall-test.c  alltoallv-rdma.cpp  alltoallv-test.cpp  intra-node-performance-test.cpp  intra_node_bigMSG.c  intra_node_contention_test.cpp  main-double.cpp  main-test-mpiGLEX.c  main.c
